# optilb

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  INSTALL.md  LICENSE  README.md  ROADMAP.md  environment.yml  pyproject.toml  requirements.txt
docs/: README.md  api.rst  benchmark_nm.md  benchmark_nm.rst  changelog.md  changelog.rst  conf.py  core.md  core.rst  index.rst  objectives.md  objectives.rst  optimizers.md  optimizers.rst  problem.md  problem.rst  runner.md  runner.rst  sampling.md  sampling.rst
docs/api/: core.md  core.rst  objectives.md  objectives.rst  optimizers.md  optimizers.rst  problem.md  problem.rst  runner.md  runner.rst  sampling.md  sampling.rst
examples/: basic_usage.py  benchmark_nm_vs_scipy.py  compare_optimisers.py  demo.py  evaluation_log_demo.py  lbm_stub.py  memoization_speedup.py  parallel_memoization.py  parallel_speedup.py  plot_objectives.py  slow_objective_comparison.py  test.py
src/optilb/: __init__.py  core.py  exceptions.py  problem.py
src/optilb/objectives/: __init__.py  lbm_stub.py
src/optilb/optimizers/: __init__.py  base.py  bfgs.py  early_stop.py  mads.py  nelder_mead.py
src/optilb/optimizers/utils/: __init__.py  transform.py
src/optilb/runner/: __init__.py  schedule.py
src/optilb/sampling/: __init__.py  lhs.py
tests/: conftest.py  test_bfgs_normalize.py  test_compare.py  test_core.py  test_objectives.py  test_optimization_problem.py  test_optimizer_bfgs.py  test_optimizer_bfgs_fd.py  test_optimizer_mads.py  test_optimizer_mads_early_stop_stub.py  test_optimizer_mads_parallel.py  test_optimizer_nelder_mead.py  test_optimizers_base.py  test_runner_schedule.py  test_sampling.py  test_transform.py  test_version.py
