[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optilb"
version = "0.0.0"
description = "Optimisation toolbox based on thesis framework."
authors = [
    {name = "Jan Bures", email = "bures.work@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "PyNomadBBO>=4.5.1",
    "pandas",
]
license = {text = "MIT"}

[project.urls]
homepage = "https://example.com/optilb"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
