[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optilb"
version = "0.0.0"
description = "Optimisation toolbox based on thesis framework."
authors = [
    {name = "Jan Bures", email = "bures.work@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]
license = {text = "MIT"}
[project.optional-dependencies]
examples = [
    "matplotlib>=3.7",
    "pandas",
]
nomad = [
    "PyNomadBBO>=4.5.1",
]
dev = [
    "black>=23.9",
    "flake8>=6.1",
    "isort>=5.12",
    "mypy>=1.6",
    "pytest>=7.4",
]

[project.urls]
homepage = "https://example.com/optilb"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
